Save data to EEPROM

--- a/Client/iOS/IoTSmartHome/IoTSmartHome/Resource/Base.lproj/Authorization.storyboard
+++ b/Client/iOS/IoTSmartHome/IoTSmartHome/Resource/Base.lproj/Authorization.storyboard
@@ -241,7 +241,7 @@
                                                                 </userDefinedRuntimeAttribute>
                                                             </userDefinedRuntimeAttributes>
                                                             <connections>
-                                                                <action selector="manualSettingTapped:" destination="WFB-i2-s2z" eventType="valueChanged" id="G0P-Ab-fKa"/>
+                                                                <action selector="manualSettingTapped:" destination="WFB-i2-s2z" eventType="touchUpInside" id="keK-4Q-4wT"/>
                                                             </connections>
                                                         </switch>
                                                     </subviews>
